--- a/style.css
+++ b/style.css
@@ -8,4 +8,15 @@
     top: 40%;
     left: 25%;
     width: 50%;
+    
+}
+    
+.top-curve {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding-top: 1rem;
+  height: 60px;
+  z-index: 2;
 }
